--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <nav class="navbar navbar-default fixed">
       <div class="container-fluid">
         <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse">
             <span class="sr-only">Toggle navigation</span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
@@ -30,13 +30,13 @@
           </button>
           <a class="navbar-brand" href>PORTFOLIO</a>
         </div>
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+        <div class="collapse navbar-collapse" id="navbar-collapse">
           <ul class="nav navbar-nav navbar-right">
-            <li><a class="scroll-link" href="#about-me">ABOUT ME</a></li>
-            <li><a class="scroll-link" href="#work">WORK</a></li>
-            <li><a class="scroll-link" href="#skills">SKILLS</a></li>
-            <li><a class="scroll-link" href="#projects">PROJECTS</a></li>
-            <li><a class="scroll-link" href="#blog">BLOG</a></li>
+            <li><a href="#about-me">ABOUT ME</a></li>
+            <li><a href="#work">WORK</a></li>
+            <li><a href="#projects">PROJECTS</a></li>
+            <li><a href="#blog">BLOG</a></li>
+            <li><a href="#contact">CONTACT</a></li>
           </ul>
         </div>
       </div>
@@ -44,8 +44,8 @@
     <div id="intro" class="row animated bounce">
       <div class="col-lg-6 col-lg-offset-3">
         <img id="avatar" src="assets/img/avatar.png" alt="Avatar" class="avatar">
-        <h3>SUDHARSANAN MURALIDHARAN</h3>
-        <h5>GRAD STUDENT | FULL STACK WEB DEV | ANDROID DEV</h5>
+        <h3 class="wh-text"><b>SUDHARSANAN MURALIDHARAN</b></h3>
+        <h5 class="wh-text">FULL STACK WEB DEV</h5>
         <div id="social">
           <a id="twitter-social" href="https://twitter.com/sudharshan_iyer" target="_blank">
             <i class="fa fa-twitter"></i>
@@ -64,7 +64,7 @@
     </div>
     <div id="about-me" class="row section">
       <div class="col-lg-8 col-lg-offset-2">
-        <h4>ABOUT ME</h4>
+        <h4 class="underlined">ABOUT ME</h4>
         <div class="row">
           <div class="col-lg-10 col-lg-offset-1">
             <div class="wow fadeIn">
@@ -81,11 +81,11 @@
     </div>
     <div id="work" class="row section">
       <div class="col-lg-8 col-lg-offset-2">
-        <h4>WHAT I DO</h4>
+        <h4 class="underlined">WHAT I DO</h4>
         <div class="row">
           <div class="col-lg-10 col-lg-offset-1">
             <p>I strive to create simple, clean &amp; responsive Web as well as Mobile apps. and I also embrace Minimalistic design. Here are some of the technologies I use daily to create awesome Apps!</p>
-            <div class="wow fadeIn" id="tech">
+            <div class="wow bounceIn" id="tech">
               <div class="row">
                 <div class="col-lg-3">
                   <img src="assets/img/ruby.png" alt="Ruby">
@@ -119,7 +119,7 @@
         </div>
       </div>
     </div>
-    <div id="skills" class="row section">
+    <!-- <div id="skills" class="row section">
       <div class="col-lg-8 col-lg-offset-2">
         <h4>SKILLS</h4>
         <div class="row">
@@ -173,33 +173,67 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
     <div id="projects" class="row section">
       <div class="col-lg-8 col-lg-offset-2">
-        <h4>PROJECTS</h4>
-        <div class="wow fadeIn">
-          <div class="row">
-          <div id="projects-owl" class="owl-carousel">
+        <h4 class="underlined">PROJECTS</h4>
+        <div class="row">
+          <div class="col-lg-10 col-lg-offset-1 wow fadeIn">
+            <div id="projects-owl" class="owl-carousel">
               <div class="rails-item item">
-                <h4>TWITTER CLONE</h4>
+                <div class="project-name">
+                  <img src="assets/img/ruby-icon.png" alt="Rails">
+                  <h4>TWITTER CLONE</h4>
+                </div>
+                <div class="project-details">
+                  <h4>TWITTER CLONE</h4>
+                </div>
               </div>
               <div class="android-item item">
-                <h4>REDDIT CLIENT</h4>
+                <div class="project-name">
+                  <img src="assets/img/android-icon.png" alt="Android">
+                </div>
+                <div class="project-details">
+                  <h4>REDDIT CLIENT</h4>
+                </div>
               </div>
               <div class="ember-item item">
-                <h4>TODO0</h4>
+                <div class="project-name">
+                  <br><br>
+                  <img src="assets/img/ember-logo.png" alt="Ember">
+                </div>
+                <div class="project-details">
+                  <h4>TODO0</h4>
+                </div>
               </div>
-              <div class="item"><h1>3</h1></div>
-              <div class="item"><h1>4</h1></div>
-              <div class="item"><h1>5</h1></div>
-              <div class="item"><h1>6</h1></div>
-              <div class="item"><h1>7</h1></div>
-              <div class="item"><h1>8</h1></div>
+              <div class="bootstrap-item item">
+                <h4>PORTFOLIO</h4>
+              </div>
+              <div class="js-item item">
+                <h4>SLIDER PANEL.JS</h4>
+              </div>
+              <div class="rails-item item">
+                <h4>2CENTS</h4>
+              </div>
+              <div class="bootstrap-item item">
+                <h4>PAPER</h4>
+              </div>
+              <div class="android-item item">
+                <h4>BARREL RACE</h4>
+              </div>
             </div>
             <div class="customNavigation">
-              <a class="btn prev">Previous</a>
-              <a class="btn next">Next</a>
+              <a class="prev"><i class="fa fa-arrow-left"></i></a>
+              <a class="next"><i class="fa fa-arrow-right"></i></a>
             </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-lg-4">
+            <img src="assets/img/octocat.jpg" alt="Octocat">
+          </div>
+          <div class="col-lg-8">
+            <p>I love contributing to Github.</p>
           </div>
         </div>
       </div>
